# history_parser

./: .gitignore  history_532141847.csv  history_532141847.html  path_data.json  pyproject.toml
app/: fill.py  main.py
