[project]
name = "1x-history-extractor"
version = "0.1.0"
description = ""
authors = [
    { name = "Adam Adamo", email = "user@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "lxml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [{ include = "app", from = "." }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
